# github

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GitVersion.yml  LICENSE  README.md  bar.txt  package.json  pyproject.toml  server.js
.github/: SECRET_SCANNING.md
.github/workflows/: docker-build-reusable.yml  docker-build.yml  docker-release.yml  enforce-pr-labels.yml  helm-release.yml  pull-request-tests.yml  python-quality.yml  version-bump.yml
app/: app.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  ingress.yaml
tests/: README.md  conftest.py  container-structure-test.yaml  test_app.py  test_environment.py
workflows/: version-bump.yml
